# cheese

./: .gitignore  Cargo.toml  build_linux.sh  controls.md  ideas.md  index.html  readme.md  thoughts.md  todo.md
animation/: character.gltf
blender/: armoury.blend  billboard.blend  bullet.blend  cheese_droplet.blend  cheese_droplet.glb  cheese_moon.blend  cheese_rock.blend  cheese_worm.blend  command_indicator.blend  crevasse.blend  explosion.blend  giblet.blend  mouse.blend  mouse_box.blend  mouse_helmet.blend  mouseblend.blend  pump.blend  scenario_planning.blend  selection_indicator.blend  surface.blend  torus.blend  wrench.blend
demo/pkg/: cheese.d.ts  cheese_bg.wasm.d.ts
gimp/: blaster.xcf  explosion.xcf  mouse.xcf  pump.xcf  titlescreen_mockup.xcf
models/: armoury.gltf  billboard.gltf  blaster.gltf  bullet.gltf  cheese_droplet.gltf  cheese_moon.gltf  command_indicator.gltf  command_path.gltf  crevasse.gltf  explosion.gltf  giblet.gltf  mouse.gltf  mouse_helmet.gltf  pump.gltf  surface.gltf  torus.gltf  wrench.gltf
pkg/: cheese.d.ts  cheese.js  cheese_bg.wasm  cheese_bg.wasm.d.ts
shaders/: animated.vert  animated.vert.spv  animated_model.vert  blur.frag  copy_to_swapchain_frame.frag  darken.frag  full_screen_quad.vert  gamma_correction.frag  lines.frag  lines.frag.spv  lines.vert  lines.vert.spv  lines_3d.vert  post_processing.frag  shader.frag  shader.frag.spv  shader.vert  shader.vert.spv  shadow_animated.vert  shadow_static.vert  static_model.vert  textured.frag  torus.frag  torus.vert  torus.vert.spv  transparent.frag  transparent.frag.spv  transparent.vert  transparent_textured.frag  transparent_textured_bloom.frag
shaders/compiled/: animated.vert.spv  animated_model.vert.spv  blur.frag.spv  copy_to_swapchain_frame.frag.spv  darken.frag.spv  full_screen_tri.vert.spv  lines.frag.spv  lines.vert.spv  lines_3d.vert.spv  post_processing.frag.spv  post_processing.vert.spv  shader.frag.spv  shader.vert.spv  shadow_animated.vert.spv  shadow_static.vert.spv  static_model.vert.spv  textured.frag.spv  torus.frag.spv  torus.vert.spv  transparent.frag.spv  transparent.vert.spv  transparent_textured.frag.spv  transparent_textured_bloom.frag.spv
src/: animation.rs  assets.rs  ecs.rs  main.rs  pathfinding.rs  renderer.rs  resources.rs  scenarios.rs  titlescreen.rs  util.rs
src/animation/: animation.rs  math.rs  mesh.rs  node.rs  skin.rs
src/ecs/: ai.rs  animation.rs  buildings.rs  combat.rs  construction.rs  controls.rs  debugging.rs  effects.rs  movement.rs  playing_menu.rs  rendering.rs
src/renderer/: lines.rs  lines_3d_pipeline.rs  lines_pipeline.rs  model_pipelines.rs  shadow_pipeline.rs  torus.rs  torus_pipeline.rs
wasm/: build.sh
