[package]
name = "cheese"
version = "0.1.0"
authors = ["Ashley Ruglys <ashley.ruglys@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.34"
arrayvec = "0.5.2"
base64 = "0.13.0"
bytemuck = { version = "1.4.1", features = ["derive"] }
cgmath = "0.17.0"
env_logger = "0.8.1"
futures = "0.3.8"
gltf = { version = "0.15.2", default-features = false, features = ["utils", "names"] }
image = { version = "0.23.11", default-features = false, features = ["png"] }
legion = { version = "0.3.1", default-features = false, features = ["codegen", "extended-tuple-impls"] }
log = "0.4.11"
lyon_tessellation = "0.16.2"
ncollide3d = "0.26.1"
ordered-float = "2.0.0"
pathfinding = "2.0.4"
spade = "1.8.2"
rand = { version = "0.7.3", default-features = false, features = ["small_rng"] }
ultraviolet = { version = "0.7.5", features = ["bytemuck"] }
wgpu = "0.6.0"
wgpu_glyph = "0.10.0"
winit = "0.23.0"
ncollide2d = "0.26.1"
derive_more = "0.99.11"

[features]
default = ["multithreading"]
# I want to be able to toggle this because wasm is (currently) only single threaded so being able to
# test it with a single thread is useful in case I make a web version.
multithreading = ["legion/parallel"]
